# mbf_mapper

./: CMakeLists.txt  README.md  eda.ipynb  pyproject.toml  requirements.txt  vis_check.py
cpp/include/: MbfDeconvolver.hpp  ioMasks.hpp  mbfPipeline.hpp  utils.hpp
cpp/src/: ioMasks.cpp  main.cpp  mbfPipeline.cpp  utils.cpp
examples/: demo.py
include/: MbfDeconvolver.hpp  MbfFermiFitter.hpp  ioDicom.hpp  utils.hpp
src/: MbfDeconvolver.cpp  MbfFermiFitter.cpp  __init__.py  cli.py  ioDicom.cpp  mbfPipeline.cpp  mbf_mapper.py  utils.cpp  utils.py  vis.py
tests/: test_mbf_mapper.py
