[project]
name = "mpf-mapper"
version = "0.1.0"
description = "Cardiac perfusion analysis and mapping tools"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.10.0",
    "opencv-python>=4.10.0",
    "plotly>=5.12.0",
    "pydicom>=3.0.1",
    "SimpleITK>=2.4.1"
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mpf-mapper = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra -q"